feat: finish all of the texts and stuff

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -40,14 +40,26 @@
 
         <section class="info">
             <h1>What defines Team Blitz?</h1>
-            <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            <p>We are a group of young engineers from St Olaves Grammar school determined for success and eagerness to learn. We joining the competition as we were dedicated about the sport and we all had an insight in what we wanted to achieve. As Blitz we aim to work quickly and efficiently. With various skill we organised ourselves to what we were best at. We aim to fulfill our full potential reaching new level. We cone to F in Schools to bring competitiveness to the sport. </p>
             
             <h1>Our goals and accomplishments</h1>
-            <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            <p>Emerging from the entry class, we now see new rules and regulations with new levels and competitions possible to reach. With the accomplishments from 2023-2024:
+                <ul>
+                    <li>2nd in the Entry Class</li>
+                    <li>Research & Development Award</li>
+                    <li>Verbal Presentation Award</li>
+                </ul>
+                With these accomplishments we now set our eyes on new heights such as:
+                <ul>
+                    <li>Fastest Car</li>
+                    <li>Best Engineered Car</li>
+                    <li>Winning regionals/nationals</li>
+                    <li>Sponsorship, portfolio, pit display awards</li>
+                </ul>
+            </p>
             
-            <!--Include a sorting/filtering system like a shop, to sort by alphabet, date joined or filter by team part (e.g. Enterprise Team or Engineering Team)-->
             <h1>Meet the Team</h1>
-            <div class="filtering">
+            <!-- <div class="filtering">
                 <button onclick="showSorts()" type="button" class="drop-button">Sort by..</button>
                 <div id="sorts">
                     <a>Recommended</a>
@@ -69,7 +81,7 @@
                     <a>Founding Member</a>
                 </div>
                 <button onclick="" type="button" class="drop-button" style="float: right;">Reset filters to default</button>
-            </div>
+            </div> -->
             <div class="team">
                 <div class="first-line">
                     <div class="person" id="yash">
@@ -78,7 +90,7 @@
                         <h2>Team Manager & Design Engineer</h2>
                         <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined December 2022</h2>
-                        <img src="../global/m-placeholder.png">
+                        <img src="./Yash.jpg">
                         <p>As well as leading the team, Yash has dedicated himself to learning many skills to aid each one of us in our roles, including himself - being the first to start learning CAD (Fusion 360) and organising & delegating tasks. He has also played a massive role in manufacturing: priming, painting, assembling, attaching vinyls and so much more, dedicating hours to the car.</p>
                         <p>"Working smarter and harder can lead to success"</p>
                     </div>
@@ -89,7 +101,7 @@
                         <h2>Design Engineer</h2>
                         <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined February 2022</h2>
-                        <img src="../global/m-placeholder.png">
+                        <img src="./Pranit.jpg">
                         <p>Pranit, not only being Design Engineer, has a strong passion for Art which allowed him to draw detailed 3D designs on paper with his incredible art skills, enabling us to start CAD work rapidly. He is also at the head of our Engineering department, designing the car alongside Yash before being sent off for testing. His creative skills have also aided us with designing prototypes, with him creating many unique cars.</p>
                         <p>"F1 in Schools is an enriching & fun experience!"</p>
                     </div>
@@ -100,7 +112,7 @@
                         <h2>Testing Engineer & Digital Manager</h2>
                         <h2 class="join-info">FOUNDING MEMBER</h2>
                         <h2>Joined October 2022</h2>
-                        <img src="../global/m-placeholder.png">
+                        <img src="./Chen.jpg">
                         <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car, and being able to produce drag and lift values for us to compare other cars against and log in our portfolio. In addition, he manages digital presence side of our brand, even creating this very website! He has also set up our email and Twitter account to use for team-related activities.</p>
                         <p>"f1 in school is very cool"</p>
                     </div>
@@ -112,9 +124,9 @@
                         <h2>Testing Engineer & Business</h2>
                         <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
                         <h2>Joined January 2024</h2>
-                        <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>"yash has no life"</p>
+                        <img src="./Josh.jpg">
+                        <p>Josh has been a long time fan of motorsport and especially Formula One , bringing useful information about the design of our cars. He also helps with the business and testing aspects of the team, proving him to be a valuable resource to the team. He has also dedicated a lot time learning how to use various Ansys and Autodesk products such as Fusion 360 and Ansys Discovery. Overall, Josh is one of the key members on this team, allowing us to flourish and thrive.</p>
+                        <p>"ALEX ALBON IN POINTS IN A WILLIAMS WOOOOOOOOOOOOOOOOOOOOOO"</p>
                     </div>
 
                     <div class="person" id="rayhaan">
@@ -123,7 +135,7 @@
                         <h2>Research & Resource Manager</h2>
                         <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined September 2023</h2>
-                        <img src="../global/m-placeholder.png">
+                        <img src="./Rayhaan.jpg">
                         <p>Rayhaan has been interested from F1 for a long time, meaning he was able to contribute a lot to our Initial Ideas from his knowledge of successful F1 cars. He is also very skilled at PowerPoint, laying out our presentations extremely effectively. As Resource Manager, he managed the portfolio, gave a helping hand during the manufacturing process and has a creative vision for the car through his expertise and passion for F1.</p>
                         <p>"F1 in Schools is extremely fun and rewarding"</p>
                     </div>
@@ -134,13 +146,13 @@
                         <h2>Graphics Designer</h2>
                         <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
                         <h2>Joined March 2024</h2>
-                        <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>"sigmaa"</p>
+                        <img src="./Anu.jpg">
+                        <p>With an interest in graphics and great skill in persuasion,He has assisted us in the creation of our logo and has also contributed to the graphics needed in other areas such as the front page of our portfolio. He is very committed to the sport. He is very liked in his position as a graphics manager and supports in other areas such as the creation of emails to get sponsorships and always has an honest passion to F1 in schools.</p>
+                        <p>"F1 in Schools is all about learning for the future. I am sigma"</p>
                     </div>
                 </div>
-                <h2>No results found..</h2>
-                <button>Reset filters</button>
+                <!-- <h2>No results found..</h2>
+                <button>Reset filters</button> -->
             </div>
         </section>
         <footer>
