fix: fix anu spelling mistake

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -147,8 +147,8 @@
                         <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
                         <h2>Joined March 2024</h2>
                         <img src="./Anu.jpg">
-                        <p>With an interest in graphics and great skill in persuasion,He has assisted us in the creation of our logo and has also contributed to the graphics needed in other areas such as the front page of our portfolio. He is very committed to the sport. He is very liked in his position as a graphics manager and supports in other areas such as the creation of emails to get sponsorships and always has an honest passion to F1 in schools.</p>
-                        <p>"F1 in Schools is all about learning for the future. I am sigma"</p>
+                        <p>With an interest in graphics and great skill in persuasion, he has assisted us in the creation of our logo and has also contributed to the graphics needed in other areas such as the front page of our portfolio. He is very committed to the sport. He is very liked in his position as a graphics manager and supports in other areas such as the creation of emails to get sponsorships and always has an honest passion to F1 in schools.</p>
+                        <p>"F1 in Schools is all about learning for the future."</p>
                     </div>
                 </div>
                 <!-- <h2>No results found..</h2>
