--- a/about-us/index.html
+++ b/about-us/index.html
@@ -43,20 +43,19 @@
             <p>We are a group of young engineers from St Olaves Grammar school determined for success and eagerness to learn. We joining the competition as we were dedicated about the sport and we all had an insight in what we wanted to achieve. As Blitz we aim to work quickly and efficiently. With various skill we organised ourselves to what we were best at. We aim to fulfill our full potential reaching new level. We cone to F in Schools to bring competitiveness to the sport. </p>
             
             <h1>Our goals and accomplishments</h1>
-            <p>Emerging from the entry class, we now see new rules and regulations with new levels and competitions possible to reach. With the accomplishments from 2023-2024:
-                <ul>
-                    <li>2nd in the Entry Class</li>
-                    <li>Research & Development Award</li>
-                    <li>Verbal Presentation Award</li>
-                </ul>
-                With these accomplishments we now set our eyes on new heights such as:
-                <ul>
-                    <li>Fastest Car</li>
-                    <li>Best Engineered Car</li>
-                    <li>Winning regionals/nationals</li>
-                    <li>Sponsorship, portfolio, pit display awards</li>
-                </ul>
-            </p>
+            <p>Emerging from the entry class, we now see new rules and regulations with new levels and competitions possible to reach. With the accomplishments from 2023-2024:</p>
+            <ul>
+                <li>2nd in the Entry Class</li>
+                <li>Research & Development Award</li>
+                <li>Verbal Presentation Award</li>
+            </ul>
+            <p>With these accomplishments we now set our eyes on new heights such as:</p>
+            <ul>
+                <li>Fastest Car</li>
+                <li>Best Engineered Car</li>
+                <li>Winning regionals/nationals</li>
+                <li>Sponsorship, portfolio, pit display awards</li>
+            </ul>
             
             <h1>Meet the Team</h1>
             <!-- <div class="filtering">
