feat: rewrite placeholder text

--- a/our-journey/index.html
+++ b/our-journey/index.html
@@ -39,44 +39,43 @@
         </section>
 
         <section class="info">
-            <!--Make timeline graphic-->
             <div class="container left">
                 <div class="contained">
                     <h1>Our team is formed as Omega</h1>
-                    <p>Yash has no life</p>
-                    <p>Yash has no life</p>
+                    <p>2nd November 2022</p>
+                    <p>Our team was originally formed as Team Omega, with members Ifti, Pamoda, Yash, Chen. Our very first designs were conceptulized during these first few weeks, with some even making it into the final car we made for regionals in 2023!</p>
                 </div>
             </div>
 
             <div class="container right">
                 <div class="contained">
-                    <h1>Major reshuffle</h1>
-                    <p>Yash has no life</p>
-                    <p>Yash has no life</p>
+                    <h1>Major reshuffle - Team change to Blitz</h1>
+                    <p>March 2023</p>
+                    <p>After the departure of Pamoda and Ifti from our team, Rayhaan and Pranit joined to fill in their roles. We also changed our name to Blitz to signify a large change in our core values and strengths.</p>
                 </div>
             </div>
 
             <div class="container left">
                 <div class="contained">
                     <h1>Regionals 2023 (Entry Class)</h1>
-                    <p>Yash has no life</p>
-                    <p>Yash has no life</p>
+                    <p>14th December 2023</p>
+                    <p>We went to our first ever F1 in Schools competition in London North where months of diligence and work paid off, and we were able to come 2nd in the region for Entry Class and won two awards (for all classes): Verbal Presentation Award and Research & Development Award.</p>
                 </div>
             </div>
 
             <div class="container right">
                 <div class="contained">
                     <h1>New Members!</h1>
-                    <p>Yash has no life</p>
-                    <p>Yash has no life</p>
+                    <p>January - March 2024</p>
+                    <p>After the regionals competition, we decided to enlist extra help so that we can lift the load more evenly, leading to the entrance of Josh and Anu to our team in our journey to the development class.</p>
                 </div>
             </div>
 
             <div class="container left">
                 <div class="contained">
-                    <h1>New Sponsors!</h1>
-                    <p>Yash has no life</p>
-                    <p>Yash has no life</p>
+                    <h1>First Sponsor!</h1>
+                    <p>June 2024</p>
+                    <p>In June 2024, we were able to finalise a deal with our partner and sponsor Silk Route Legal who became a Platinum sponsor, which meant that they played a significant part in helping us in our journey in the Development Class.</p>
                 </div>
             </div>
         </section>
