feat: replace placeholder text on "our work"

--- a/our-work/index.html
+++ b/our-work/index.html
@@ -44,18 +44,19 @@
                 <div class="container">
                     <h2>Research and Development Award</h2>
                     <h3>London North Regionals - Achieved Entry Class</h3>
-                    <p>Yash has no life</p>
+                    <p>The very first award we received, we achieved this due to a strong development strategy involving heavy amounts of CFD testing and iterative design. Our passion for F1 and motorsport in general also fuelled our motivation to further research about the physics of an F1 car.</p>
                 </div>     
                 <div class="container">
                     <h2>Verbal Presentation Award</h2>
                     <h3>London North Regionals - Achieved Entry Class</h3>
-                    <p>Yash has no life</p>
+                    <p>We received this award at the London North regionals following a strong Verbal Presentation thanks to excessive memorisation of our lines the nights before (oops, should've started earlier). We covered many aspects in our presentation and paid close attention to it and the scorecard for the section to achieve maximum marks for it.</p>
                 </div> 
             </div>      
             <h1>Our Car Designs</h1>
             <div class="container" id="entry-car">
                 <h2>Dash - Our Entry Class Car</h2>
-                <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>    
+                <h3>Drag: 0.24974529N</h3>
+                <p>Dash was our first car we created and competed with, going through many stages to reach where it had got to. It performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. It has minor changes from previous designs and a new rear wing following advice from experienced teams in our school: A longer tear drop shape rather than an oval. This new rear wing introduced in the last few months of the design-test cycle after other DEV and PRO F1 in Schools teams recommended us to try a longer rear wing. Promising CFD results led us to produce this final car to be manufactured for the competition day. It is made up of 3 parts: Pierce for the front wing, Flat for the side pod, and elipse for the rear wing. These parts were chosen because they performed the best in initial rounds of testing and its chemistry between one another was also great, according to the CFD results. Not only that, the minor adjustments we made to the connection between side and rear pod for example also proved useful in our CFD results. We hope that Dash v2 will lead us to success on competition day, as we have worked incredibly hard (and smart) to achieve this car. Not only that, it took around 2 weeks to go from concept to finished product, after many coats of paint, primer and vinyl stickers.</p>
             </div>
         </section>
 
