feat: insert sponsor img

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -44,8 +44,8 @@
             <h1>We are currently in partnership with:</h1>
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
                 <h2>Silk Route Legal</h2>
-                <p>[Sponsor Pitch here]</p>
-                <img src="">
+                <p class="left">[Sponsor Pitch here]</p>
+                <img class="right" src="silk.jpg">
             </div>
         </section>
 
