feat: remove all public view of blog, include new sponsor in footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="./our-journey/" class="link">Our Journey</a>
                 <a href="./our-work/" class="link">Our Work</a>
                 <a href="./sponsors/" class="link">Sponsors</a>
-                <a href="./blog/" class="link">Blog</a>
+                <!-- <a href="./blog/" class="link">Blog</a> -->
                 <a href="./contact-us/" class="link">Contact Us</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
             </div>
@@ -58,14 +58,14 @@
             <a href="https://www.f1inschools.co.uk/about.html" target="_blank">Learn more..</a>
             
             <h1>Recent News</h1>
-            <a href="./blog/" style="padding-bottom: 20px; display: inline-block; width: 100%">See our blog..</a>
+            <!-- <a href="./blog/" style="padding-bottom: 20px; display: inline-block; width: 100%">See our blog..</a> -->
             <div class="article">
                 <div class="content">
                     <h2>Website v2!</h2>
-                    <p>1st March, 2024</p>
+                    <p>1st July, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
                     <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you..</p>
-                    <a href="./blog/8">Continue reading..</a>
+                    <!-- <a href="./blog/8">Continue reading..</a> -->
                 </div>
             </div>
             
@@ -75,7 +75,7 @@
                     <p>20th January, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
                     <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Josh Abraham to our Engineering and Business team..</p>
-                    <a href="./blog/7">Continue reading..</a>
+                    <!-- <a href="./blog/7">Continue reading..</a> -->
                 </div>
             </div>
 
@@ -94,8 +94,7 @@
         <footer>
             <div id="sponsors">
                 <img src="./sponsors/crossfields.png">
-                <img src="./global/s-placeholder.png">
-                <img src="./global/s-placeholder.png">
+                <img src="./sponsors/silk.jpg">
             </div>
 
             <div class="footnav">
@@ -104,7 +103,7 @@
                 <a href="./our-journey/" class="footlink">Our Journey</a>
                 <a href="./our-work/" class="footlink">Our Work</a>
                 <a href="./sponsors/" class="footlink">Sponsors</a>
-                <a href="./blog/" class="footlink">Blog</a>
+                <!-- <a href="./blog/" class="footlink">Blog</a> -->
                 <a href="./contact-us/" class="footlink">Contact Us</a>
             </div>
 
