--- a/our-journey/index.html
+++ b/our-journey/index.html
@@ -27,7 +27,7 @@
                 <a href="../our-journey/" class="link">Our Journey</a>
                 <a href="../our-work/" class="link">Our Work</a>
                 <a href="../sponsors/" class="link">Sponsors</a>
-                <a href="../blog/" class="link">Blog</a>
+                <!-- <a href="../blog/" class="link">Blog</a> -->
                 <a href="../contact-us/" class="link">Contact Us</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
             </div>
@@ -83,8 +83,7 @@
         <footer>
             <div id="sponsors">
                 <img src="../sponsors/crossfields.png">
-                <img src="../global/s-placeholder.png">
-                <img src="../global/s-placeholder.png">
+                <img src="../sponsors/silk.jpg">
             </div>
 
             <div class="footnav">
@@ -93,7 +92,7 @@
                 <a href="../our-journey/" class="footlink">Our Journey</a>
                 <a href="../our-work/" class="footlink">Our Work</a>
                 <a href="../sponsors/" class="footlink">Sponsors</a>
-                <a href="../blog/" class="footlink">Blog</a>
+                <!-- <a href="../blog/" class="footlink">Blog</a> -->
                 <a href="../contact-us/" class="footlink">Contact Us</a>
             </div>
 
