--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,6 +4,7 @@
         <title>Team Blitz | Sponsors</title>
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
+        <link rel="stylesheet" type="text/css" href="./styling.css">
         <link rel="icon" type="image/x-icon" href="../global/xs-placeholder.png">
 
         <meta charset="UTF-8">
@@ -26,7 +27,7 @@
                 <a href="../our-journey/" class="link">Our Journey</a>
                 <a href="../our-work/" class="link">Our Work</a>
                 <a href="../sponsors/" class="link">Sponsors</a>
-                <a href="../blog/" class="link">Blog</a>
+                <!-- <a href="../blog/" class="link">Blog</a>-->
                 <a href="../contact-us/" class="link">Contact Us</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerify()"><i class="fa fa-bars"></i></a>
             </div>
@@ -51,9 +52,8 @@
 
         <footer>
             <div id="sponsors">
-                <img src="../sponsors/crossfields.png">
-                <img src="../global/s-placeholder.png">
-                <img src="../global/s-placeholder.png">
+                <img src="./crossfields.png">
+                <img src="./silk.jpg">
             </div>
 
             <div class="footnav">
@@ -62,7 +62,7 @@
                 <a href="../our-journey/" class="footlink">Our Journey</a>
                 <a href="../our-work/" class="footlink">Our Work</a>
                 <a href="../sponsors/" class="footlink">Sponsors</a>
-                <a href="../blog/" class="footlink">Blog</a>
+                <!-- <a href="../blog/" class="footlink">Blog</a> -->
                 <a href="../contact-us/" class="footlink">Contact Us</a>
             </div>
 
