fix: fix broken references to home

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -19,10 +19,10 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="../home/" class="logo"><img src="../global/xs-placeholder.png"></a>
+            <a href="../" class="logo"><img src="../global/xs-placeholder.png"></a>
             
             <div class="links">
-                <a href="../home" class="link">Home</a>
+                <a href="../" class="link">Home</a>
                 <a href="../about-us" class="link">About Us</a>
                 <a href="../our-journey/" class="link">Our Journey</a>
                 <a href="../our-work/" class="link">Our Work</a>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="footnav">
-                <a href="../home" class="footlink">Home</a>
+                <a href="../" class="footlink">Home</a>
                 <a href="../about-us" class="footlink">About Us</a>
                 <a href="../our-journey/" class="footlink">Our Journey</a>
                 <a href="../our-work/" class="footlink">Our Work</a>
