fix: fix ugly structure of buttons

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -46,10 +46,12 @@
                 <div class="row">
                     <a class="button">Contact Whole Team</a>
                     <a class="button">Contact for Business Enquiries</a>
-                    <a class="button">Contact Enterprise Team</a>
                 </div>
                 <div class="row">
                     <a class="button">Contact Engineering Team</a>
+                    <a class="button">Contact Enterprise Team</a>
+                </div>
+                <div class="row">
                     <a class="button">Contact Yash Parekh, Team Manager</a>
                     <a class="button">Contact Pranit Malhotra, Design Engineer</a>
                 </div>
