feat: add emails to all links

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -42,26 +42,27 @@
             <h1>Get in touch with us!</h1>
             <p>Whether it be a business enquiry or just a question about F1 in Schools in general, we're happy to respond and have a chat with you! We are available through Instagram, Twitter, and e-mail. We will aim to respond to emails and direct messages within a week.</p>
             <h2 id="titre">Emails</h2>
+            <p>If you prefer a more formal setting to contact us, please use the specific email for your specific enquiry:</p>
             <div class="container">
                 <div class="row">
-                    <a class="button">Contact Whole Team</a>
-                    <a class="button">Contact for Business Enquiries</a>
+                    <a class="button" href="mailto:hello@teamblitz.uk">Contact Whole Team</a>
+                    <a class="button" href="mailto:business@teamblitz.uk">Contact for Business Enquiries</a>
                 </div>
                 <div class="row">
-                    <a class="button">Contact Engineering Team</a>
-                    <a class="button">Contact Enterprise Team</a>
+                    <a class="button" href="mailto:engineering@teamblitz.uk">Contact Engineering Team</a>
+                    <a class="button" href="mailto:enterprise@teamblitz.uk">Contact Enterprise Team</a>
                 </div>
                 <div class="row">
-                    <a class="button">Contact Yash Parekh, Team Manager</a>
-                    <a class="button">Contact Pranit Malhotra, Design Engineer</a>
+                    <a class="button" href="mailto:yash@teamblitz.uk">Contact Yash Parekh, Team Manager</a>
+                    <a class="button" href="mailto:pranit@teamblitz.uk">Contact Pranit Malhotra, Design Engineer</a>
                 </div>
                 <div class="row">
-                    <a class="button">Contact Chen Hui Wang, Testing/Digital Manager</a>
-                    <a class="button">Contact Josh Abraham, Testing/Business Manager</a>
+                    <a class="button" href="mailto:chen@teamblitz.uk">Contact Chen Hui Wang, Testing/Digital Manager</a>
+                    <a class="button" href="mailto:josh@teamblitz.uk">Contact Josh Abraham, Testing/Business Manager</a>
                 </div>
                 <div class="row">
-                    <a class="button">Contact Anuoluwapo Silva, Graphic Designer</a>
-                    <a class="button">Contact Rayhaan Smith, Resource Manager</a>
+                    <a class="button" href="mailto:anu@teamblitz.uk">Contact Anuoluwapo Silva, Graphic Designer</a>
+                    <a class="button" href="mailto:rayhaan@teamblitz.uk">Contact Rayhaan Smith, Resource Manager</a>
                 </div>
             </div>
         </section>
