fix: fix big gap between subheading and text

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -42,7 +42,7 @@
             <h1>Get in touch with us!</h1>
             <p>Whether it be a business enquiry or just a question about F1 in Schools in general, we're happy to respond and have a chat with you! We are available through Instagram, Twitter, and e-mail. We will aim to respond to emails and direct messages within a week.</p>
             <h2 id="titre">Emails</h2>
-            <p>If you prefer a more formal setting to contact us, please use the specific email for your specific enquiry:</p>
+            <p id="desc">If you prefer a more formal setting to contact us, please use the specific email for your specific enquiry:</p>
             <div class="container">
                 <div class="row">
                     <a class="button" href="mailto:hello@teamblitz.uk">Contact Whole Team</a>
