feat: add social media links

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -65,6 +65,13 @@
                     <a class="button" href="mailto:rayhaan@teamblitz.uk">Contact Rayhaan Smith, Resource Manager</a>
                 </div>
             </div>
+            <h2 id="titre">Social Media</h2>
+            <p id="desc">If you just need one quick response or a more informal chat with us, feel free to DM us on Instagram or Twitter!</p>
+            <div class="row">
+                <a href="https://twitter.com/team_blitz8" class="chippy" target="_blank"><i class="fa fa-twitter"></i>Go to our Twitter</a>
+                <a href="https://www.instagram.com/team_blitz8" class="chippy"><i class="fa fa-instagram" target="_blank"></i>Go to our Instagram</a>
+            </div>
+            <br>
         </section>
 
         <footer>
