fix: weird thing with img, make breaks

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -44,9 +44,11 @@
                         
             <h1>We are currently in partnership with:</h1>
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
-                <h2>Silk Route Legal</h2>
-                <p class="left">[Sponsor Pitch here]</p>
-                <img class="right" src="silk.jpg">
+                <h2>Silk Route Legal - Platinum Sponsor</h2>
+                <div class="contain">
+                    <p>Silk Route Legal is our first ever sponsor...</p>
+                    <img class="right" src="silk.jpg">
+                </div>
             </div>
         </section>
 
