feat: remove placeholder images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Team Blitz | Home</title>
 
         <link rel="stylesheet" type="text/css" href="./global/styling.css">
-        <link rel="icon" type="image/x-icon" href="./global/xs-placeholder.png">
+        <link rel="icon" type="image/x-icon" href="./global/logo.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -16,7 +16,7 @@
         <meta property="og:url" content="https://teamblitz.pages.dev/">
         <meta property="og:title" content="Team Blitz | Home">
         <meta property="og:description" content="Welcome to Team Blitz, a team of 5 ambitious boys from St. Olave's Grammar School competing in the F1 in Schools competition in the Development Class.">
-        <meta property="og:image" content="../global/xs-placeholder.png">
+        <meta property="og:image" content="../global/logo.png">
         <meta property="og:image:height" content="256px">
         <meta property="og:image:width" content="256px">
         <meta property="og:sitename" content="Team Blitz">
@@ -29,7 +29,7 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="./" class="logo"><img src="./global/xs-placeholder.png"></a>
+            <a href="./" class="logo"><img src="./global/blog.png"></a>
 
             <div class="links">
                 <a href="./" class="link">Home</a>
@@ -62,7 +62,7 @@
             <div class="article">
                 <div class="content">
                     <h2>Website v2!</h2>
-                    <p>1st July, 2024</p>
+                    <p>20th July, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
                     <p>We're excited to announce the launch of v2 of our website, updated with our recent achievements and with a new, stylish user interface for you..</p>
                     <!-- <a href="./blog/8">Continue reading..</a> -->
@@ -72,9 +72,9 @@
             <div class="article">
                 <div class="content">
                     <h2>New Member Incoming!</h2>
-                    <p>20th January, 2024</p>
+                    <p>15th April, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
-                    <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Josh Abraham to our Engineering and Business team..</p>
+                    <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Anu, to our Enterprise Team...</p>
                     <!-- <a href="./blog/7">Continue reading..</a> -->
                 </div>
             </div>
