--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="./" class="logo"><img src="./global/blog.png"></a>
+            <a href="./" class="logo"><img src="./global/logo.png"></a>
 
             <div class="links">
                 <a href="./" class="link">Home</a>
