fix: all the pictures wrong sizing, general styling etc.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Team Blitz | Home</title>
 
         <link rel="stylesheet" type="text/css" href="./global/styling.css">
-        <link rel="icon" type="image/x-icon" href="./global/logo.png">
+        <link rel="icon" type="image/x-icon" href="./global/Logo.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -16,7 +16,7 @@
         <meta property="og:url" content="https://teamblitz.pages.dev/">
         <meta property="og:title" content="Team Blitz | Home">
         <meta property="og:description" content="Welcome to Team Blitz, a team of 5 ambitious boys from St. Olave's Grammar School competing in the F1 in Schools competition in the Development Class.">
-        <meta property="og:image" content="../global/logo.png">
+        <meta property="og:image" content="../global/Logo.png">
         <meta property="og:image:height" content="256px">
         <meta property="og:image:width" content="256px">
         <meta property="og:sitename" content="Team Blitz">
@@ -29,7 +29,7 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="./" class="logo"><img src="./global/logo.png"></a>
+            <a href="./" class="logo"><img src="./global/Logo.png"></a>
 
             <div class="links">
                 <a href="./" class="link">Home</a>
@@ -74,7 +74,7 @@
                     <h2>New Member Incoming!</h2>
                     <p>15th April, 2024</p>
                     <p>St. Olave's Grammar School, Orpington</p>
-                    <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Anu, to our Enterprise Team...</p>
+                    <p>Following our success at Regionals last month, we are thrilled to introduce our new Member, Anuoluwapo Silva, to our Enterprise Team...</p>
                     <!-- <a href="./blog/7">Continue reading..</a> -->
                 </div>
             </div>
