--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
         <link rel="stylesheet" type="text/css" href="./styling.css">
-        <link rel="icon" type="image/x-icon" href="../global/xs-placeholder.png">
+        <link rel="icon" type="image/x-icon" href="../global/Logo.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -20,7 +20,7 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="../" class="logo"><img src="../global/xs-placeholder.png"></a>
+            <a href="../" class="logo"><img src="../global/Logo.png"></a>
 
             <div class="links">
                 <a href="../" class="link">Home</a>
