--- a/404.html
+++ b/404.html
@@ -37,10 +37,11 @@
 
         <section class="info" id="heh">
             <div>
-                <h1>You've entered the dark void of the 404 error..</h1>
+                <h1 id="plzwork2">You've entered the dark void of the 404 error.</h1>
+                <h1 id="plzwork">The page you tried to visit doesn't exist. You're lost.</h1>
                 <p>Quick! Go back to the previous page or go home to get away from the Yash!</p>
-                <button onclick="history.back()" class="but">Time-travel back to the previous page</button>
-                <a href="./" class="but">Run home</a>
+                <button onclick="history.back()" class="but">Time-travel back</button>
+                <button onclick="location.href='./'" class="but">Run home</a>
             </div>
             <img src="./global/yash2.png" id="hehehe">
         </section>
