--- a/our-work/index.html
+++ b/our-work/index.html
@@ -54,9 +54,9 @@
             </div>      
             <h1>Our Car Designs</h1>
             <div class="container" id="entry-car">
-                <h2>Dash - Our Entry Class Car</h2>
+                <h2>BL1 (Codename Dash) - Our Entry Class Car</h2>
                 <h3>Drag: 0.24974529N</h3>
-                <p class="para">Dash was our first car we created and competed with, going through many stages to reach where it had got to. It performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. It has minor changes from previous designs and a new rear wing following advice from experienced teams in our school: A longer tear drop shape rather than an oval. This new rear wing introduced in the last few months of the design-test cycle after other DEV and PRO F1 in Schools teams recommended us to try a longer rear wing. Promising CFD results led us to produce this final car to be manufactured for the competition day. It is made up of 3 parts: Pierce for the front wing, Flat for the side pod, and elipse for the rear wing.</p>
+                <p class="para">BL1 was our first car we created and competed with, going through many stages to reach where it had got to. It performed the best in CFD testing between our other prototypes, and has a balanced amount of airflow around the car. It has minor changes from previous designs and a new rear wing following advice from experienced teams in our school: A longer tear drop shape rather than an oval. This new rear wing introduced in the last few months of the design-test cycle after other DEV and PRO F1 in Schools teams recommended us to try a longer rear wing. Promising CFD results led us to produce this final car to be manufactured for the competition day. It is made up of 3 parts: Pierce for the front wing, Flat for the side pod, and elipse for the rear wing.</p>
                 <img src="dash.png" class="img">
             </div>
             <br>
